# redcircle-protocol

./: .gitignore  Anchor.toml  package-lock.json
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
programs/redcircle-protocol/: Cargo.toml
programs/redcircle-protocol/src/: constants.rs  curve.rs  error.rs  lib.rs
programs/redcircle-protocol/src/instructions/: add_liquidity.rs  buy_sell.rs  claim_fees.rs  create_pool.rs  init_bins.rs  initialize.rs  migrate_pool.rs  mod.rs  pool_admin.rs  referral.rs  remove_liquidity.rs  swap.rs
programs/redcircle-protocol/src/math/: curve.rs  dlmm.rs  mod.rs  sigmoid.rs
programs/redcircle-protocol/src/state/: bin.rs  config.rs  fee.rs  market.rs  mod.rs  pool.rs  position.rs  referral_state.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  curve.ts  idl.ts  index.ts  pda.ts  types.ts
tests/: 01-protocol.ts  02-trading.ts  03-fees.ts  04-sdk-pda.ts  05-sdk-curve.ts  06-sdk-client.ts  helpers.ts  redcircle-protocol.ts
