[package]
name = "redcircle-protocol"
version = "0.1.0"
description = "RedCircle Protocol - Tokenize and trade Reddit posts on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redcircle_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
